# heise-classroom-devsecops-ki1125

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  _.actrc  pyproject.toml  runGithubActionLocally.sh
.github/workflows/: artifacts-collector.yml  buildAndPushContainer.yml  pr-threat-modeling.yml
dependency-track/: docker-compose.yml
devsecops_ki_extensions/: threat_modeling_pr.py
docker/: .dockerignore  Dockerfile  app.py  requirements.txt  result.json
docs/: index.html
iac/: Pulumi.yaml  README.md  index.ts  package-lock.json  package.json
iac/modules/: juiceShop.ts  n8n.ts
iac/policy/: PulumiPolicy.yaml  README.md  index.ts  package.json
keys/: test_secrets.py
notebooks/: .env.example  Anomaly_Detection.ipynb  Dockerfile.ipynb  SAST.ipynb  Secrets.ipynb
