[project]
name = "heise-classroom-devsecops-ki1125"
version = "0.1.0"
description = ""
authors = [
    {name = "DoPaNiK",email = "963151+DoPaNik@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab (>=4.4.10,<5.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "datasets (>=4.4.1,<5.0.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "openai (>=2.8.0,<3.0.0)",
    "pre-commit (>=4.4.0,<5.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
